data/all_generated_tests/raw_wast_tests/unreachable_InfiniteLoops_1166.wast
;; 7. **Test Description:**     - Implement a loop containing multiple `unreachable` instructions interspersed with `br_if` to break the loop.    - **Constraint:** Confirm that each `unreachable` leads to an immediate trap and interrupts further execution.    - **Relation to Infinite Loops:** Improper tracking and handling of `unreachable` may allow the loop to run indefinitely.    - **Expected Behavior:** Trap should occur due to `unreachable`.

(assert_invalid
  (module
    (func $unreachable-in-loop-with-br_if
      loop
        unreachable 
        br_if 1 
        unreachable 
      end
    )
  )
  "type mismatch"
)